--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p align="center"><font size="7">iOS企业版下载测试</font></p>
 <p align="center">
 	<!-- 这里就用到了上文提到的itms-services协议了 -->
-	<a href="itms-services:///?action=download-manifest&url=https://chenxiaoqiang1988.github.io/ios-distribution/dss151391997110005/mygame.plist">点击下载</a>
+	<a οnclick="window.location.href='itms-services:///?action=download-manifest&url=https://chenxiaoqiang1988.github.io/ios-distribution/dss151391997110005/mygame.plist'">点击下载</a>
 </p>
 </div>
 </body> 
